--- a/algorithm-java/pom.xml
+++ b/algorithm-java/pom.xml
@@ -1,8 +1,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>Test</groupId>
-  <artifactId>Test</artifactId>
+  <groupId>algorithm-java</groupId>
+  <artifactId>algorithm-java</artifactId>
   <packaging>war</packaging>
   <version>0.0.1-SNAPSHOT</version>
   <name>Test Maven Webapp</name>
@@ -29,44 +29,6 @@
 			<artifactId>javax.servlet-api</artifactId>
 			<version>3.0.1</version>
 	</dependency>
-    
-    
-    <dependency>
-	    <groupId>org.quartz-scheduler</groupId>
-	    <artifactId>quartz</artifactId>
-	    <version>2.2.1</version>
-	</dependency>
-    
-<dependency>
-    <groupId>org.apache.httpcomponents</groupId>
-    <artifactId>httpcore-nio</artifactId>
-    <version>4.4.4</version>
-</dependency>
-
-<dependency>
-    <groupId>org.apache.httpcomponents</groupId>
-    <artifactId>httpasyncclient</artifactId>
-    <version>4.1</version>
-</dependency>
-<dependency>
-    <groupId>org.apache.httpcomponents</groupId>
-    <artifactId>httpcore</artifactId>
-    <version>4.4.4</version>
-</dependency>
-
-    <dependency>
-	    <groupId>org.apache.kafka</groupId>
-	    <artifactId>kafka-clients</artifactId>
-	    <version>0.10.1.0</version>
-	</dependency>
-    <!-- https://mvnrepository.com/artifact/org.apache.kafka/kafka_2.10 -->
-	<dependency>
-	    <groupId>org.apache.kafka</groupId>
-	    <artifactId>kafka_2.10</artifactId>
-	    <version>0.10.0.0</version>
-	</dependency>
-	    
-    
     <!-- 日志文件管理包 -->
 	 <dependency>  
          <groupId>log4j</groupId>  
@@ -91,24 +53,17 @@
         <version>${slf4j.version}</version>
     </dependency>
     
-   <dependency>
-    <groupId>io.netty</groupId>
-    <artifactId>netty-all</artifactId>
-    <version>4.1.5.Final</version>
-   </dependency>
-   
-   
-   <!-- https://mvnrepository.com/artifact/redis.clients/jedis -->
-<dependency>
-    <groupId>redis.clients</groupId>
-    <artifactId>jedis</artifactId>
-    <version>2.7.3</version>
-</dependency>
-   
+    <!-- 表达式解释器 -->
+	<dependency>
+	    <groupId>org.eweb4j</groupId>
+	    <artifactId>fel</artifactId>
+	    <version>0.8</version>
+	</dependency>
+    
   </dependencies>
   
-        
+    
   <build>
-    <finalName>Test</finalName>
+    <finalName>algorithm-java</finalName>
   </build>
 </project>
